--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Task List</title>
+    <title>Git Employed</title>
   </head>
   
   <body>
