--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   </head>
   
   <body>
-    <h1>HELLO WORLD</h1>
+    <h1 id = "title">Git Employed</h1>
     <div id="app"></div>
     <!-- <script src='../dist/main.js'></script> -->
   </body>
