--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,16 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Git Employed</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;800&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  
+
   <body>
-    <h1 id = "title">Git Employed</h1>
+    <h1 id="title">Git Employed</h1>
     <div id="app"></div>
     <!-- <script src='../dist/main.js'></script> -->
   </body>
